--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -215,6 +215,13 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    compile(name:'imsdk-plus-6.1.2166', ext:'aar')
+    api 'com.tencent.imsdk:imsdk-plus:6.1.2166'
+}
+repositories {
+    flatDir() {
+        dirs 'libs'
+    }
 }
 
 // Run this once to be able to run the application with BUCK
